<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string
        name="app_name">DISMATHOID</string>
    <string
        name="help">Help Screen</string>
    <string
        name="settings">Settings Screen</string>
    <string
        name="game">Game Screen</string>
    <string
        name="scores">Scores Screen</string>
    <string
        name="app_logo_top">DISMATHOID</string>
    <string
        name="app_logo_bottom">KNIGHT OR KNAVE?</string>
    <string
        name="app_version_info">Version 1.0\nCopyright © 2014 MKC \nAll Rights
        Reserved.
    </string>
    <string
        name="menu_item_settings">Settings</string>
    <string
        name="menu_item_play">Play</string>
    <string
        name="menu_item_scores">High Score</string>
    <string
        name="menu_item_help">Help</string>
    <string
        name="all_scores">"All Scores"</string>
    <string
        name="friends_scores">"Scores of Friends"</string>
    <string
        name="no_scores">"No scores to show."</string>
    <string
        name="username">"Username"</string>
    <string
        name="rank">"Ranking"</string>
    <string
        name="score">"Score"</string>
    <string
        name="wait_msg">"Retrieving Scores ..."</string>
    <string
        name="wait_title">"Loading ..."</string>
    <string
        name="settings_nickname">Nickname:</string>
    <string
        name="settings_email">Email:</string>
    <string
        name="settings_dob">Birth Date:</string>
    <string
        name="settings_dob_not_set">No Date Set</string>
    <string
        name="settings_button_dob">Pick Date</string>
    <string
        name="settings_button_pwd">Set Password</string>
    <string
        name="settings_gender">Gender:</string>
    <string
        name="settings_password">Password:</string>
    <string
        name="settings_password2">Password (again):</string>
    <string
        name="settings_pwd_set">Password Set</string>
    <string
        name="settings_pwd_not_set">No Password Set</string>
    <string
        name="settings_pwd_not_equal">Passwords do not match, please try again.</string>
    <string
        name="settings_pwd_equal">Passwords match.</string>
    <string
        name="gender_male">Male</string>
    <string
        name="gender_female">Female</string>
    <string
        name="gender_neutral">Prefer Not To Say</string>
    <string
        name="set_password_string">Set Password</string>
    <string
        name="yes"> KNIGHT </string>
    <string
        name="no"> KNAVE </string>
    <string
        name="no_questions">No more questions available. </string>
    <string 
        name="correct_toast">CORRECT :)</string>
    <string 
        name="incorrect_toast">WRONG :(</string>
</resources>
